test/negative/feature_omittedfinalfieldinitializer.java

public class feature_omittedfinalfieldinitializer {
  public feature_omittedfinalfieldinitializer() {}
  protected final int x /* = 0 */;
}

